--- a/css/player.css
+++ b/css/player.css
@@ -1,8 +1,11 @@
 .fulltab{
     position: absolute;
+    top:0px;
+    left:0px;
     width: 100%;
     height:100%;
     background: #000000;
+    z-index:1000;
 }
 #go-form{
     height:100vh;
@@ -10,4 +13,24 @@
 .top-offset{
     margin-top:20vh;
 }
+.full-height{
+    height:100%;
+}
+.control-btn{
+    height:32px
+}
+.dropzone{
+    height:100px
+}
+.active{
+    background: #b2dfdb ;
+}
+header, main, footer {
+      padding-left: 300px;
+    }
 
+    @media only screen and (max-width : 992px) {
+      header, main, footer {
+        padding-left: 0;
+      }
+    }
